--- a/tecnimotors/src/app/homebody/blog/blog.component.html
+++ b/tecnimotors/src/app/homebody/blog/blog.component.html
@@ -43,6 +43,7 @@
     </div>
 </div>
 <!-- End preloader -->
+<!-- End preloader -->
 <app-header></app-header>
-<p>catalogos works!</p>
+<p>blog works!</p>
 <app-footer></app-footer>
