--- a/tecnimotors/src/app/homebody/nosotros/nosotros.component.html
+++ b/tecnimotors/src/app/homebody/nosotros/nosotros.component.html
@@ -1,1 +1,156 @@
-<p>nosotros works!</p>
+<!-- Start preloader -->
+<div id="preloader" #preloader>
+    <div id="ctn-preloader" class="ctn-preloader">
+        <div class="animation-preloader">
+            <div class="spinner"></div>
+            <div class="txt-loading">
+                <span data-text-preloader="C" class="letters-loading">
+                    C
+                </span>
+
+                <span data-text-preloader="A" class="letters-loading">
+                    A
+                </span>
+
+                <span data-text-preloader="R" class="letters-loading">
+                    R
+                </span>
+
+                <span data-text-preloader="G" class="letters-loading">
+                    G
+                </span>
+
+                <span data-text-preloader="A" class="letters-loading">
+                    A
+                </span>
+
+                <span data-text-preloader="N" class="letters-loading">
+                    N
+                </span>
+
+                <span data-text-preloader="D" class="letters-loading">
+                    D
+                </span>
+
+                <span data-text-preloader="O" class="letters-loading">
+                    O
+                </span>
+            </div>
+        </div>
+
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+    </div>
+</div>
+<!-- End preloader -->
+<app-header></app-header>
+<main>
+    <div class="row" style="margin: 0px 7rem;">
+        <div class="col-md-4">
+            <br><br>
+            <h2>Historia</h2>
+            <br>
+            <div>
+                <p>En Representaciones Tecnimotors venimos trabajando desde
+                    1979, nos dedicamos a la importación y comercialización al
+                    por mayor y menor de motocicletas, cargueros, cuatrimotos,
+                    bicicletas, repuestos para motocicletas y bicicletas.
+                </p>
+
+                <p>
+                    Somos titulares de las marcas RTM, ACC, TSK, TECNI, y asimismo,
+                    somos representantes exclusivos de las marcas KMC, KENDA,
+                    MAXIMA, DUNLOP, entre otras.
+                </p>
+
+                <p>
+                    Contamos con una amplia experiencia en el rubro de bicicletas
+                    desde 1994 y en motocicletas desde el 2002 con nuestra propia
+                    marca peruana RTM, que se caracteriza por ofrecer una gran
+                    variedad de modelos de motocicletas, a buen precio, de buena
+                    calidad y resistencia.
+                </p>
+            </div>
+            <br>
+            <br>
+        </div>
+
+        <div class="col-md-8">
+            <br>
+            <!--
+            <div style="justify-content: space-evenly;display: flex;">
+                <p>OFICINA/ TIENDA PRINCIPAL</p>
+            </div>
+            -->
+            <div class="row">
+                <div class="col-md-5">
+                    <div style="background-color:#e4e4e4;font-size: 13px;">
+                        <p style="text-align: center;margin-bottom: 0rem;">
+                            <strong>TECNIMOTORS</strong>
+                        </p>
+                        <p style="margin-bottom: 0rem;">
+                            &nbsp; &nbsp; <strong>LOCAL:</strong>
+                            BRILLANTES
+                        </p>
+                        <p style="margin-bottom: 0rem;">
+                            &nbsp; &nbsp;<strong>Teléfono:</strong>
+                            <br>&nbsp; &nbsp; &nbsp;(51-1) 613-1212
+                            <br>&nbsp; &nbsp;&nbsp;Anexos: 215 - 260 - 261
+                            <br>&nbsp; &nbsp;<strong>Horario:</strong>
+                            <br>&nbsp; &nbsp; &nbsp;L-V: 9:00 am - 6:00 pm.
+                            <br>&nbsp; &nbsp; &nbsp;Sab: 9:00 am - 2:00 pm.
+                        </p>
+                        <p style="text-align: -webkit-center;padding-bottom: 0.5rem;">
+                            <button class="btn btn-outline-Danger" type="button" style="display: flex;background-color: #ff7a7a;
+                                color: white;font-size: 15px;font-weight: 600;">
+                                Ir a Contactos
+                            </button>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-7">
+                    <iframe tabindex="0" aria-hidden="false" style="border: 0;" height="300" width="400"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15605.870555322961!2d-77.03586317121673!3d-12.080105163120747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c944d88fac57%3A0x1d39f32f7067c1a0!2sTECNIMOTORS%20(Sede%20Principal)!5e0!3m2!1ses!2spe!4v1606770286895!5m2!1ses!2spe"
+                        allowfullscreen="" frameborder="0">
+                    </iframe>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-5">
+                    <div style="background-color:#e4e4e4;font-size: 13px;">
+                        <p style="text-align: center;margin-bottom: 0rem;">
+                            <strong>TECNIMOTORS</strong>
+                        </p>
+                        <p style="margin-bottom: 0rem;">
+                            &nbsp; &nbsp;<strong>LOCAL:</strong>
+                            AV.IQUITOS 442-446-448
+                        </p>
+                        <p style="margin-bottom: 0rem;">
+                            &nbsp; &nbsp;<strong>Teléfono:</strong>
+                            <br>&nbsp; &nbsp; &nbsp;(51-1) 330-4424
+                            <br>&nbsp; &nbsp; &nbsp;(51-1) 332-2161
+                            <br>&nbsp; &nbsp;<strong>Horario:</strong>
+                            <br>&nbsp; &nbsp; &nbsp;L-V: 9:00 am- 6:00 pm.
+                            <br>&nbsp; &nbsp; &nbsp;Sab: 9:00 am- 2:00 pm.
+                        </p>
+                        <p style="text-align: -webkit-center;padding-bottom: 0.5rem;">
+                            <button class="btn btn-outline-Danger" type="button" style="display: flex;background-color: #ff7a7a;
+                                color: white;font-size: 15px;font-weight: 600;">
+                                Ir a Contactos
+                            </button>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-7">
+                    <iframe tabindex="0" aria-hidden="false" style="border: 0;" height="300" width="400"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15606.81230995631!2d-77.03981547121921!3d-12.063938963292953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c89570947be5%3A0xf551fb6ca99dc142!2sRepresentaciones%20Tecnimotors!5e0!3m2!1ses!2spe!4v1606770107594!5m2!1ses!2spe"
+                        allowfullscreen="" frameborder="0">
+                    </iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+</main>
+<app-footer></app-footer>
